--- a/CSG_ADMINPRO.UI/Views/Shared/_Layout.cshtml
+++ b/CSG_ADMINPRO.UI/Views/Shared/_Layout.cshtml
@@ -33,6 +33,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Asegurados" asp-action="Index">Asegurados</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Index">Usuarios</a>
+                        </li>
                     </ul>
                 </div>
             </div>
