--- a/CSG_ADMINPRO.UI/Views/Asegurados/Create.cshtml
+++ b/CSG_ADMINPRO.UI/Views/Asegurados/Create.cshtml
@@ -33,7 +33,7 @@
                         </div>
 
                         <div class="form-group mt-4">
-                            <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i> Nuevo</button>
+                            <button type="submit" class="btn btn-primary"><i class="fas fa-lock"></i> Guardar</button>
                         </div>
                     </form>
                 </div>
