--- a/CSG_ADMINPRO.UI/Views/Shared/_Layout.cshtml
+++ b/CSG_ADMINPRO.UI/Views/Shared/_Layout.cshtml
@@ -58,6 +58,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Index">Usuarios</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Citas" asp-action="Index">Citas</a>
+                        </li>
                     </ul>
                 </div>
             </div>
