--- a/CSG_ADMINPRO.UI/Views/Citas/Create.cshtml
+++ b/CSG_ADMINPRO.UI/Views/Citas/Create.cshtml
@@ -20,7 +20,7 @@
                 <div class="form-group">
                     <label asp-for="ClienteId"></label>
                     <select class="form-control" asp-for="ClienteId" asp-items="@(new SelectList(ViewBag.Clientes, "Id", "NombreCliente"))">
-                        <option>-- SELECCIONAR CLIENTE --</option>
+                        <option disabled selected>-- SELECCIONAR CLIENTE --</option>
                     </select>
                     <span asp-validation-for="ClienteId" class="text-danger"></span>
                 </div>
@@ -49,7 +49,11 @@
                     <span asp-validation-for="Ubicacion" class="text-danger"></span>
                 </div>
 
-                <button class="btn btn-outline-success" type="submit">Guardar</button>
+                <div class="mt-3">
+                    <button class="btn btn-outline-success" type="submit">Guardar</button>
+
+                </div>
+
             </form>
         </div>
     </div>
